26E2_5/TP5/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-store
  labels:
    app.kubernetes.io/name: nexus-store
    app.kubernetes.io/part-of: e-commerce-system
    environment: production
