26E2_5/TP5/k8s/02-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-rabbitmq
  namespace: nexus-store
  labels:
    app: nexus-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-rabbitmq
  template:
    metadata:
      labels:
        app: nexus-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - name: amqp
              containerPort: 5672
            - name: management
              containerPort: 15672
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 20
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-rabbitmq
  namespace: nexus-store
  labels:
    app: nexus-rabbitmq
spec:
  selector:
    app: nexus-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  type: ClusterIP
