26E2_5/TP5/k8s/03-shipping-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-shipping-service
  namespace: nexus-store
  labels:
    app: nexus-shipping-service
    tier: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: nexus-shipping-service
  template:
    metadata:
      labels:
        app: nexus-shipping-service
        tier: backend
    spec:
      containers:
        - name: shipping-service
          image: nexus-shipping-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8082
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 35
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-shipping-service
  namespace: nexus-store
  labels:
    app: nexus-shipping-service
spec:
  selector:
    app: nexus-shipping-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
