26E2_5/TP5/k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus-store
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  rules:
    - http:
        paths:
          # Roteamento do Microsserviço de Logística e Frete
          - path: /api/v1/shipping
            pathType: Prefix
            backend:
              service:
                name: nexus-shipping-service
                port:
                  number: 8082

          # Roteamento do Backend Principal (Catálogo, Pedidos, Auditoria, Eventos)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nexus-backend
                port:
                  number: 8080

          # Roteamento do Frontend SPA
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-frontend
                port:
                  number: 80
